[metadata]
name = image_utils
url = https://github.com/minilabus/image-utils
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = None
description = Code base for image manipulation.
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

packages = find:
include_package_data = True

[options]
python_requires = >=3.7
setup_requires = packaging >=19.0
install_requires = 
      imageio
      Pillow
      scipy
      scikit-image


[options.extras_require]
test =
      flake8